# EI_Pick_n_Place

./: README.md
Arduino/braccio_plus_plus_controller_final_v3.1/: braccio_plus_plus_controller_final_v3.1.ino  uart_tx.pio.h
Arduino/libraries/micro_ros_arduino-humble/extras/library_generation/extra_packages/: extra_packages.repos
pnp_ws/src/braccio_description/: CMakeLists.txt  package.xml
pnp_ws/src/braccio_description/launch/: display.launch.py
pnp_ws/src/braccio_description/rviz/: urdf.rviz
pnp_ws/src/braccio_description/urdf/: braccio_arm.xacro  braccio_arm.xacro.urdf
pnp_ws/src/braccio_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pnp_ws/src/braccio_moveit_config/config/: braccio.ros2_control.xacro  braccio.srdf  braccio.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kinematics_bio_ik.yaml  kinematics_pick_ik.yaml  kinematics_trac_ik.yaml  moveit_controllers.yaml
pnp_ws/src/braccio_moveit_config/launch/: braccio.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
pnp_ws/src/ei_yolov5_detections/: CMakeLists.txt  package.xml
pnp_ws/src/ei_yolov5_detections/launch/: ei_yolov5_publisher.launch.py  ei_yolov5_publisher.launch.py.0
pnp_ws/src/ei_yolov5_detections/resources/: ei-pnp_yolov5n_320_openvino_2022.1_6shave.blob
pnp_ws/src/ei_yolov5_detections/src/: ei_yolov5_bbox_image_publisher.cpp  ei_yolov5_spatial_publisher.cpp  ei_yolov5_spatial_stream.py
pnp_ws/src/pick_n_place/: CMakeLists.txt  package.xml
pnp_ws/src/pick_n_place/launch/: mtc.rviz  pick_n_place.launch.py  rviz.launch.py  urdf_launch.py
pnp_ws/src/pick_n_place/src/: pick_n_place.cpp
pnp_ws/src/pick_n_place/urdf/: braccio_depthai_descr.urdf.xacro
